--- a/wp-content/themes/norcal-sbdc/assets/css/style.css
+++ b/wp-content/themes/norcal-sbdc/assets/css/style.css
@@ -2887,49 +2887,61 @@ fieldset:disabled .gform_page_footer a.gform_previous_button,
       -webkit-box-shadow: 0 0 0 0 rgba(60, 114, 169, 0.5);
               box-shadow: 0 0 0 0 rgba(60, 114, 169, 0.5); }
 
-.btn-blue, nav.pagination .nav-links .page-numbers.current, .wp-block-crown-blocks-testimonial-slider .testimonial-slider-link a, .wp-block-crown-blocks-center-finder .location-search-form .form-footer button, .wp-block-crown-blocks-champion-finder .location-search-form .form-footer button,
+.btn-blue, nav.pagination .nav-links .page-numbers.current, .wp-block-crown-blocks-testimonial-slider .testimonial-slider-link a, .wp-block-crown-blocks-center-finder .location-search-form .form-footer button,
+form.center-search .form-footer button, .wp-block-crown-blocks-champion-finder .location-search-form .form-footer button,
 .wp-block-crown-blocks-champion-zip-search .location-search-form .form-footer button {
   color: #FFFFFF;
   background-color: #0381C3;
   border-color: #0381C3; }
-  .btn-blue:hover, nav.pagination .nav-links .page-numbers.current:hover, .wp-block-crown-blocks-testimonial-slider .testimonial-slider-link a:hover, .wp-block-crown-blocks-center-finder .location-search-form .form-footer button:hover, .wp-block-crown-blocks-champion-finder .location-search-form .form-footer button:hover,
+  .btn-blue:hover, nav.pagination .nav-links .page-numbers.current:hover, .wp-block-crown-blocks-testimonial-slider .testimonial-slider-link a:hover, .wp-block-crown-blocks-center-finder .location-search-form .form-footer button:hover,
+  form.center-search .form-footer button:hover, .wp-block-crown-blocks-champion-finder .location-search-form .form-footer button:hover,
   .wp-block-crown-blocks-champion-zip-search .location-search-form .form-footer button:hover {
     color: #FFFFFF;
     background-color: #02689d;
     border-color: #026091; }
-  .btn-blue:focus, nav.pagination .nav-links .page-numbers.current:focus, .wp-block-crown-blocks-testimonial-slider .testimonial-slider-link a:focus, .wp-block-crown-blocks-center-finder .location-search-form .form-footer button:focus, .wp-block-crown-blocks-champion-finder .location-search-form .form-footer button:focus,
-  .wp-block-crown-blocks-champion-zip-search .location-search-form .form-footer button:focus, .btn-blue.focus, nav.pagination .nav-links .focus.page-numbers.current, .wp-block-crown-blocks-testimonial-slider .testimonial-slider-link a.focus, .wp-block-crown-blocks-center-finder .location-search-form .form-footer button.focus, .wp-block-crown-blocks-champion-finder .location-search-form .form-footer button.focus,
+  .btn-blue:focus, nav.pagination .nav-links .page-numbers.current:focus, .wp-block-crown-blocks-testimonial-slider .testimonial-slider-link a:focus, .wp-block-crown-blocks-center-finder .location-search-form .form-footer button:focus,
+  form.center-search .form-footer button:focus, .wp-block-crown-blocks-champion-finder .location-search-form .form-footer button:focus,
+  .wp-block-crown-blocks-champion-zip-search .location-search-form .form-footer button:focus, .btn-blue.focus, nav.pagination .nav-links .focus.page-numbers.current, .wp-block-crown-blocks-testimonial-slider .testimonial-slider-link a.focus, .wp-block-crown-blocks-center-finder .location-search-form .form-footer button.focus,
+  form.center-search .form-footer button.focus, .wp-block-crown-blocks-champion-finder .location-search-form .form-footer button.focus,
   .wp-block-crown-blocks-champion-zip-search .location-search-form .form-footer button.focus {
     color: #FFFFFF;
     background-color: #02689d;
     border-color: #026091;
     -webkit-box-shadow: 0 0 0 0 rgba(41, 148, 204, 0.5);
             box-shadow: 0 0 0 0 rgba(41, 148, 204, 0.5); }
-  .btn-blue.disabled, nav.pagination .nav-links .disabled.page-numbers.current, .wp-block-crown-blocks-testimonial-slider .testimonial-slider-link a.disabled, .wp-block-crown-blocks-center-finder .location-search-form .form-footer button.disabled, .wp-block-crown-blocks-champion-finder .location-search-form .form-footer button.disabled,
-  .wp-block-crown-blocks-champion-zip-search .location-search-form .form-footer button.disabled, .btn-blue:disabled, nav.pagination .nav-links .page-numbers.current:disabled, .wp-block-crown-blocks-testimonial-slider .testimonial-slider-link a:disabled, .wp-block-crown-blocks-center-finder .location-search-form .form-footer button:disabled, .wp-block-crown-blocks-champion-finder .location-search-form .form-footer button:disabled,
+  .btn-blue.disabled, nav.pagination .nav-links .disabled.page-numbers.current, .wp-block-crown-blocks-testimonial-slider .testimonial-slider-link a.disabled, .wp-block-crown-blocks-center-finder .location-search-form .form-footer button.disabled,
+  form.center-search .form-footer button.disabled, .wp-block-crown-blocks-champion-finder .location-search-form .form-footer button.disabled,
+  .wp-block-crown-blocks-champion-zip-search .location-search-form .form-footer button.disabled, .btn-blue:disabled, nav.pagination .nav-links .page-numbers.current:disabled, .wp-block-crown-blocks-testimonial-slider .testimonial-slider-link a:disabled, .wp-block-crown-blocks-center-finder .location-search-form .form-footer button:disabled,
+  form.center-search .form-footer button:disabled, .wp-block-crown-blocks-champion-finder .location-search-form .form-footer button:disabled,
   .wp-block-crown-blocks-champion-zip-search .location-search-form .form-footer button:disabled {
     color: #FFFFFF;
     background-color: #0381C3;
     border-color: #0381C3; }
-  .btn-blue:not(:disabled):not(.disabled):active, nav.pagination .nav-links .page-numbers.current:not(:disabled):not(.disabled):active, .wp-block-crown-blocks-testimonial-slider .testimonial-slider-link a:not(:disabled):not(.disabled):active, .wp-block-crown-blocks-center-finder .location-search-form .form-footer button:not(:disabled):not(.disabled):active, .wp-block-crown-blocks-champion-finder .location-search-form .form-footer button:not(:disabled):not(.disabled):active,
-  .wp-block-crown-blocks-champion-zip-search .location-search-form .form-footer button:not(:disabled):not(.disabled):active, .btn-blue:not(:disabled):not(.disabled).active, nav.pagination .nav-links .page-numbers.current:not(:disabled):not(.disabled).active, .wp-block-crown-blocks-testimonial-slider .testimonial-slider-link a:not(:disabled):not(.disabled).active, .wp-block-crown-blocks-center-finder .location-search-form .form-footer button:not(:disabled):not(.disabled).active, .wp-block-crown-blocks-champion-finder .location-search-form .form-footer button:not(:disabled):not(.disabled).active,
+  .btn-blue:not(:disabled):not(.disabled):active, nav.pagination .nav-links .page-numbers.current:not(:disabled):not(.disabled):active, .wp-block-crown-blocks-testimonial-slider .testimonial-slider-link a:not(:disabled):not(.disabled):active, .wp-block-crown-blocks-center-finder .location-search-form .form-footer button:not(:disabled):not(.disabled):active,
+  form.center-search .form-footer button:not(:disabled):not(.disabled):active, .wp-block-crown-blocks-champion-finder .location-search-form .form-footer button:not(:disabled):not(.disabled):active,
+  .wp-block-crown-blocks-champion-zip-search .location-search-form .form-footer button:not(:disabled):not(.disabled):active, .btn-blue:not(:disabled):not(.disabled).active, nav.pagination .nav-links .page-numbers.current:not(:disabled):not(.disabled).active, .wp-block-crown-blocks-testimonial-slider .testimonial-slider-link a:not(:disabled):not(.disabled).active, .wp-block-crown-blocks-center-finder .location-search-form .form-footer button:not(:disabled):not(.disabled).active,
+  form.center-search .form-footer button:not(:disabled):not(.disabled).active, .wp-block-crown-blocks-champion-finder .location-search-form .form-footer button:not(:disabled):not(.disabled).active,
   .wp-block-crown-blocks-champion-zip-search .location-search-form .form-footer button:not(:disabled):not(.disabled).active,
   .show > .btn-blue.dropdown-toggle,
   nav.pagination .nav-links .show > .dropdown-toggle.page-numbers.current,
   .wp-block-crown-blocks-testimonial-slider .testimonial-slider-link .show > a.dropdown-toggle,
   .wp-block-crown-blocks-center-finder .location-search-form .form-footer .show > button.dropdown-toggle,
+  form.center-search .form-footer .show > button.dropdown-toggle,
   .wp-block-crown-blocks-champion-finder .location-search-form .form-footer .show > button.dropdown-toggle,
   .wp-block-crown-blocks-champion-zip-search .location-search-form .form-footer .show > button.dropdown-toggle {
     color: #FFFFFF;
     background-color: #026091;
     border-color: #025784; }
-    .btn-blue:not(:disabled):not(.disabled):active:focus, nav.pagination .nav-links .page-numbers.current:not(:disabled):not(.disabled):active:focus, .wp-block-crown-blocks-testimonial-slider .testimonial-slider-link a:not(:disabled):not(.disabled):active:focus, .wp-block-crown-blocks-center-finder .location-search-form .form-footer button:not(:disabled):not(.disabled):active:focus, .wp-block-crown-blocks-champion-finder .location-search-form .form-footer button:not(:disabled):not(.disabled):active:focus,
-    .wp-block-crown-blocks-champion-zip-search .location-search-form .form-footer button:not(:disabled):not(.disabled):active:focus, .btn-blue:not(:disabled):not(.disabled).active:focus, nav.pagination .nav-links .page-numbers.current:not(:disabled):not(.disabled).active:focus, .wp-block-crown-blocks-testimonial-slider .testimonial-slider-link a:not(:disabled):not(.disabled).active:focus, .wp-block-crown-blocks-center-finder .location-search-form .form-footer button:not(:disabled):not(.disabled).active:focus, .wp-block-crown-blocks-champion-finder .location-search-form .form-footer button:not(:disabled):not(.disabled).active:focus,
+    .btn-blue:not(:disabled):not(.disabled):active:focus, nav.pagination .nav-links .page-numbers.current:not(:disabled):not(.disabled):active:focus, .wp-block-crown-blocks-testimonial-slider .testimonial-slider-link a:not(:disabled):not(.disabled):active:focus, .wp-block-crown-blocks-center-finder .location-search-form .form-footer button:not(:disabled):not(.disabled):active:focus,
+    form.center-search .form-footer button:not(:disabled):not(.disabled):active:focus, .wp-block-crown-blocks-champion-finder .location-search-form .form-footer button:not(:disabled):not(.disabled):active:focus,
+    .wp-block-crown-blocks-champion-zip-search .location-search-form .form-footer button:not(:disabled):not(.disabled):active:focus, .btn-blue:not(:disabled):not(.disabled).active:focus, nav.pagination .nav-links .page-numbers.current:not(:disabled):not(.disabled).active:focus, .wp-block-crown-blocks-testimonial-slider .testimonial-slider-link a:not(:disabled):not(.disabled).active:focus, .wp-block-crown-blocks-center-finder .location-search-form .form-footer button:not(:disabled):not(.disabled).active:focus,
+    form.center-search .form-footer button:not(:disabled):not(.disabled).active:focus, .wp-block-crown-blocks-champion-finder .location-search-form .form-footer button:not(:disabled):not(.disabled).active:focus,
     .wp-block-crown-blocks-champion-zip-search .location-search-form .form-footer button:not(:disabled):not(.disabled).active:focus,
     .show > .btn-blue.dropdown-toggle:focus,
     nav.pagination .nav-links .show > .dropdown-toggle.page-numbers.current:focus,
     .wp-block-crown-blocks-testimonial-slider .testimonial-slider-link .show > a.dropdown-toggle:focus,
     .wp-block-crown-blocks-center-finder .location-search-form .form-footer .show > button.dropdown-toggle:focus,
+    form.center-search .form-footer .show > button.dropdown-toggle:focus,
     .wp-block-crown-blocks-champion-finder .location-search-form .form-footer .show > button.dropdown-toggle:focus,
     .wp-block-crown-blocks-champion-zip-search .location-search-form .form-footer .show > button.dropdown-toggle:focus {
       -webkit-box-shadow: 0 0 0 0 rgba(41, 148, 204, 0.5);
@@ -3259,32 +3271,34 @@ fieldset:disabled .gform_page_footer a.gform_previous_button,
       -webkit-box-shadow: 0 0 0 0 rgba(198, 199, 200, 0.5);
               box-shadow: 0 0 0 0 rgba(198, 199, 200, 0.5); }
 
-.btn-white, #footer-primary-cta-links a {
+.btn-white, .text-color-light form.center-search .form-footer button, #footer-primary-cta-links a {
   color: #343a40;
   background-color: #FFFFFF;
   border-color: #FFFFFF; }
-  .btn-white:hover, #footer-primary-cta-links a:hover {
+  .btn-white:hover, .text-color-light form.center-search .form-footer button:hover, #footer-primary-cta-links a:hover {
     color: #343a40;
     background-color: #ececec;
     border-color: #e6e6e6; }
-  .btn-white:focus, #footer-primary-cta-links a:focus, .btn-white.focus, #footer-primary-cta-links a.focus {
+  .btn-white:focus, .text-color-light form.center-search .form-footer button:focus, #footer-primary-cta-links a:focus, .btn-white.focus, .text-color-light form.center-search .form-footer button.focus, #footer-primary-cta-links a.focus {
     color: #343a40;
     background-color: #ececec;
     border-color: #e6e6e6;
     -webkit-box-shadow: 0 0 0 0 rgba(225, 225, 226, 0.5);
             box-shadow: 0 0 0 0 rgba(225, 225, 226, 0.5); }
-  .btn-white.disabled, #footer-primary-cta-links a.disabled, .btn-white:disabled, #footer-primary-cta-links a:disabled {
+  .btn-white.disabled, .text-color-light form.center-search .form-footer button.disabled, #footer-primary-cta-links a.disabled, .btn-white:disabled, .text-color-light form.center-search .form-footer button:disabled, #footer-primary-cta-links a:disabled {
     color: #343a40;
     background-color: #FFFFFF;
     border-color: #FFFFFF; }
-  .btn-white:not(:disabled):not(.disabled):active, #footer-primary-cta-links a:not(:disabled):not(.disabled):active, .btn-white:not(:disabled):not(.disabled).active, #footer-primary-cta-links a:not(:disabled):not(.disabled).active,
+  .btn-white:not(:disabled):not(.disabled):active, .text-color-light form.center-search .form-footer button:not(:disabled):not(.disabled):active, #footer-primary-cta-links a:not(:disabled):not(.disabled):active, .btn-white:not(:disabled):not(.disabled).active, .text-color-light form.center-search .form-footer button:not(:disabled):not(.disabled).active, #footer-primary-cta-links a:not(:disabled):not(.disabled).active,
   .show > .btn-white.dropdown-toggle,
+  .text-color-light form.center-search .form-footer .show > button.dropdown-toggle,
   #footer-primary-cta-links .show > a.dropdown-toggle {
     color: #343a40;
     background-color: #e6e6e6;
     border-color: #dfdfdf; }
-    .btn-white:not(:disabled):not(.disabled):active:focus, #footer-primary-cta-links a:not(:disabled):not(.disabled):active:focus, .btn-white:not(:disabled):not(.disabled).active:focus, #footer-primary-cta-links a:not(:disabled):not(.disabled).active:focus,
+    .btn-white:not(:disabled):not(.disabled):active:focus, .text-color-light form.center-search .form-footer button:not(:disabled):not(.disabled):active:focus, #footer-primary-cta-links a:not(:disabled):not(.disabled):active:focus, .btn-white:not(:disabled):not(.disabled).active:focus, .text-color-light form.center-search .form-footer button:not(:disabled):not(.disabled).active:focus, #footer-primary-cta-links a:not(:disabled):not(.disabled).active:focus,
     .show > .btn-white.dropdown-toggle:focus,
+    .text-color-light form.center-search .form-footer .show > button.dropdown-toggle:focus,
     #footer-primary-cta-links .show > a.dropdown-toggle:focus {
       -webkit-box-shadow: 0 0 0 0 rgba(225, 225, 226, 0.5);
               box-shadow: 0 0 0 0 rgba(225, 225, 226, 0.5); }
@@ -23762,9 +23776,11 @@ nav.pagination {
 
 /*	Center Finder
 ---------------------------------------------------------*/
-.wp-block-crown-blocks-center-finder .location-search-form .field {
+.wp-block-crown-blocks-center-finder .location-search-form .field,
+form.center-search .field {
   position: relative; }
-  .wp-block-crown-blocks-center-finder .location-search-form .field:before {
+  .wp-block-crown-blocks-center-finder .location-search-form .field:before,
+  form.center-search .field:before {
     content: '';
     background-image: url('data:image/svg+xml,%3csvg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="%23233252" class="bi bi-search" viewBox="0 0 16 16"%3e%3cpath fill-rule="evenodd" d="M10.442 10.442a1 1 0 0 1 1.415 0l3.85 3.85a1 1 0 0 1-1.414 1.415l-3.85-3.85a1 1 0 0 1 0-1.415z"/%3e%3cpath fill-rule="evenodd" d="M6.5 12a5.5 5.5 0 1 0 0-11 5.5 5.5 0 0 0 0 11zM13 6.5a6.5 6.5 0 1 1-13 0 6.5 6.5 0 0 1 13 0z"/%3e%3c/svg%3e');
     width: 1.5rem;
@@ -23775,19 +23791,22 @@ nav.pagination {
     position: absolute;
     left: 0;
     top: .6rem; }
-  .wp-block-crown-blocks-center-finder .location-search-form .field input {
+  .wp-block-crown-blocks-center-finder .location-search-form .field input,
+  form.center-search .field input {
     padding-left: 2.25rem;
     -webkit-box-shadow: inset 0 -2px #012D61;
             box-shadow: inset 0 -2px #012D61; }
 
-.wp-block-crown-blocks-center-finder .location-search-form .form-footer button {
+.wp-block-crown-blocks-center-finder .location-search-form .form-footer button,
+form.center-search .form-footer button {
   width: 3rem;
   padding-left: 0;
   padding-right: 0;
   text-indent: -100000px;
   overflow: hidden;
   position: relative; }
-  .wp-block-crown-blocks-center-finder .location-search-form .form-footer button:before {
+  .wp-block-crown-blocks-center-finder .location-search-form .form-footer button:before,
+  form.center-search .form-footer button:before {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     display: inline-block;
@@ -23813,6 +23832,24 @@ nav.pagination {
         -ms-flex-align: center;
             align-items: center;
     font-size: 1.25rem; }
+
+.text-color-light form.center-search .field:before {
+  background-image: url('data:image/svg+xml,%3csvg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="%23ffffff" class="bi bi-search" viewBox="0 0 16 16"%3e%3cpath fill-rule="evenodd" d="M10.442 10.442a1 1 0 0 1 1.415 0l3.85 3.85a1 1 0 0 1-1.414 1.415l-3.85-3.85a1 1 0 0 1 0-1.415z"/%3e%3cpath fill-rule="evenodd" d="M6.5 12a5.5 5.5 0 1 0 0-11 5.5 5.5 0 0 0 0 11zM13 6.5a6.5 6.5 0 1 1-13 0 6.5 6.5 0 0 1 13 0z"/%3e%3c/svg%3e'); }
+
+.text-color-light form.center-search .field input {
+  color: #fff;
+  -webkit-box-shadow: inset 0 -2px #fff;
+          box-shadow: inset 0 -2px #fff; }
+  .text-color-light form.center-search .field input::-webkit-input-placeholder {
+    color: rgba(255, 255, 255, 0.5); }
+  .text-color-light form.center-search .field input::-moz-placeholder {
+    color: rgba(255, 255, 255, 0.5); }
+  .text-color-light form.center-search .field input:-ms-input-placeholder {
+    color: rgba(255, 255, 255, 0.5); }
+  .text-color-light form.center-search .field input::-ms-input-placeholder {
+    color: rgba(255, 255, 255, 0.5); }
+  .text-color-light form.center-search .field input::placeholder {
+    color: rgba(255, 255, 255, 0.5); }
 
 @media (min-width: 768px) {
   .wp-block-crown-blocks-center-finder .locations article.location {
