--- a/wp-content/themes/norcal-sbdc-ptac/assets/src/scss/imports/_common.scss
+++ b/wp-content/themes/norcal-sbdc-ptac/assets/src/scss/imports/_common.scss
@@ -31,3 +31,9 @@
         }
     }
 }
+
+.wp-block-crown-blocks-team-member-index article.type-team_member .entry-headshot-photo .image {
+    mix-blend-mode: initial;
+    filter: initial;
+    opacity: 1;
+}
