--- a/wp-content/themes/norcal-sbdc-ptac/assets/css/style.css
+++ b/wp-content/themes/norcal-sbdc-ptac/assets/css/style.css
@@ -29886,6 +29886,7 @@ body.single-webinar_s #related-content {
   margin-right: 10px; }
   #header-primary-navigation .mega-menu .mega-menu-item.cta > a {
     background-color: #D11141;
+    color: #fff;
     font-size: 11px;
     font-weight: 500;
     letter-spacing: 1.2px;
