--- a/wp-content/themes/norcal-sbdc-ptac/assets/src/scss/imports/_common.scss
+++ b/wp-content/themes/norcal-sbdc-ptac/assets/src/scss/imports/_common.scss
@@ -13,6 +13,7 @@
 
                 > a {
                     background-color: $red;
+                    color: #fff;
                     font-size: 11px;
                     font-weight: 500;
                     letter-spacing: 1.2px;
