Overrides for featured post slider block

--- a/wp-content/themes/norcal-sbdc-ptac/assets/css/style.css
+++ b/wp-content/themes/norcal-sbdc-ptac/assets/css/style.css
@@ -29906,3 +29906,6 @@ body.single-webinar_s #related-content {
 
 #site-footer-regional-info .contact .branch {
   text-transform: initial; }
+
+.wp-block-crown-blocks-featured-post-slider article .entry-date {
+  display: none; }
