--- a/wp-content/themes/norcal-sbdc-ptac/assets/src/scss/imports/_common.scss
+++ b/wp-content/themes/norcal-sbdc-ptac/assets/src/scss/imports/_common.scss
@@ -42,3 +42,13 @@
 #site-footer-regional-info .contact .branch {
     text-transform: initial;
 }
+
+
+
+.wp-block-crown-blocks-featured-post-slider {
+	article {
+		.entry-date {
+			display: none;
+		}
+	}
+}
