Updating header nav

--- a/wp-content/themes/norcal-sbdc-ca/assets/src/scss/imports/_common.scss
+++ b/wp-content/themes/norcal-sbdc-ca/assets/src/scss/imports/_common.scss
@@ -31,48 +31,60 @@
 }
 
 #site-branding {
+	flex: 1 0 auto;
 	@include media-breakpoint-up(md) {
-		flex: 0 0 120px;
-		width: 120px;
+		flex: 0 0 auto;
+		margin-right: 2rem;
 	}
 	@include media-breakpoint-up(lg) {
-		flex: 0 0 160px;
-		width: 160px;
+		margin-right: 3rem;
 	}
-	@include media-breakpoint-up(xl) {
-		// width: 160px;
-		// flex: 0 0 160px;
-		// margin: 0;
-		// justify-content: center;
-		// position: static;
-	}
-}
-#site-logo {
-	// @include media-breakpoint-up(xl) {
-	// 	justify-content: center;
-	// }
-	// a img {
-		// @include media-breakpoint-up(xl) {
-		// 	left: 50%;
-		// 	transform: translateX(-50%);
-		// }
-	// }
 }
 #site-title {
-	@include media-breakpoint-up(xl) {
-		position: absolute;
-		left: 0;
-		top: .5rem;
-		height: auto;
-		right: auto;
-		width: auto;
-		transform: translateY(-10px)
-	}
+	position: relative;
+	opacity: 1;
+	visibility: visible;
+	left: 0;
+	top: 0;
+	transform: none;
+	
 	.title {
 		letter-spacing: 0;
 		color: $darker-blue;
-		.sbdc {
+		margin-bottom: 0;
+		line-height: 1;
+		transition: color .2s ease-out;
+		#header.text-color-light & {
+			color: #fff;
+		}
+		#header.is-sticky & {
+			color: $darker-blue;
+		}
+		.location {
 			font-weight: 400;
+			letter-spacing: .1em;
+			display: block;
+			font-size: 75%;
+		}
+		.sbdc {
+			font-weight: 700;
+			display: flex;
+			align-items: center;
+			&::after {
+				content: '';
+				display: block;
+				flex: 1 1 auto;
+				margin-left: 4px;
+				background-color: rgba($darker-blue, .2);
+				height: .6em;
+				transition: background-color .2s ease-out;
+				#header.text-color-light & {
+					background-color: rgba(#fff, .2);
+				}
+				#header.is-sticky & {
+					background-color: rgba($darker-blue, .2);
+				}
+			}
 		}
 	}
 }
@@ -89,10 +101,6 @@
 	@include media-breakpoint-up(xl) {
 		// flex: 0 0 calc(50% - 75px);
 		// justify-content: flex-start;
-		transition: margin-top .2s ease-out;
-		#header.is-sticky & {
-			margin-top: 1rem;
-		}
 	}
 }
 #header-primary-navigation-menu {
@@ -114,11 +122,14 @@
 	> .menu-item {
 		&:hover,
 		&.active {
-			> a::after {
-				opacity: 1;
-				width: calc(100% - 1rem);
-				@include media-breakpoint-up(lg) {
-					width: calc(100% - 2rem);
+			> a {
+				color: $dark-blue;
+				&::after {
+					opacity: 1;
+					width: calc(100% - 1rem);
+					@include media-breakpoint-up(lg) {
+						width: calc(100% - 2rem);
+					}
 				}
 			}
 			> .sub-menu {
@@ -156,9 +167,11 @@
 				@include media-breakpoint-up(lg) {
 					left: 1rem;
 				}
-				#header.text-color-light &,
-				#header.is-sticky & {
+				#header.text-color-light & {
 					border-color: #fff;
+				}
+				#header.is-sticky & {
+					border-color: $primary;
 				}
 			}
 		}
@@ -318,10 +331,11 @@
 	@extend .btn-sm;
 	@extend .btn-light;
 	margin-right: -1rem;
-	height: 28px;
+	height: 48px;
 	background-color: rgba(#fff, .1);
 	border-color: rgba(#fff, .1);
-	transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out, margin .2s ease-out, height .2s ease-out;
+	color: $darker-blue;
+	transition: color 0.15s, background-color 0.15s, border-color 0.15s, box-shadow 0.15s ease-in-out, margin .2s ease-out, height .2s ease-out;
 	@include media-breakpoint-up(md) {
 		display: flex;
 		margin-right: -1.5rem;
@@ -334,11 +348,18 @@
 	@include media-breakpoint-up(xl) {
 		margin-right: -2.5rem;
 	}
+	&:hover {
+		background-color: $darker-blue;
+		border-color: $darker-blue;
+		color: #fff;
+	}
 	// @media (min-width: 1340px) {
 	// 	margin-right: calc((100vw - 1260px) / -2);
 	// }
 	.label {
 		margin: 0;
+		color: inherit;
+		transition: color 0.15s;
 		@include media-breakpoint-up(lg) {
 			font-size: 1rem;
 		}
@@ -350,25 +371,442 @@
 #header.is-sticky #mobile-menu-toggle {
 	background-color: #F6FAFD;
 	border-color: #F6FAFD;
-	margin-top: -12px;
-	margin-bottom: -12px;
-	height: 90px;
+	color: $darker-blue;
+	&:hover {
+		background-color: $darker-blue;
+		border-color: $darker-blue;
+		color: #fff;
+	}
+	.label {
+		color: inherit;
+	}
 }
 
+body.mobile-menu-active {
+	@include media-breakpoint-up(md) {
+		overflow: hidden;
+	}
+}
+#mobile-menu {
+	background-color: $light-blue;
+	max-width: none;
+	width: 100%;
+	left: 0;
+	transform: translate3d(0, -2rem, 0);
+	transition: transform .2s ease-out, visibility 0s .2s, transform .2s ease-out, opacity .2s;
+	opacity: 0;
+	@include media-breakpoint-up(md) {
+		display: block;
+	}
+	body.admin-bar & {
+		@media (min-width: 783px) {
+			padding-top: 32px;
+		}
+	}
+	body.mobile-menu-active & {
+		transform: none;
+		left: 0;
+		opacity: 1;
+		transition-delay: 0s;
+	}
+	> .scrollable {
+		transform: none;
+		display: flex;
+		> .inner {
+			width: 100%;
+			display: flex;
+			flex-direction: column;
+		}
+	}
+	.menu-contents {
+		flex: 1 1 auto;
+		position: relative;
+		@include media-breakpoint-up(lg) {
+			display: flex;
+			background-color: $darker-blue;
+		}
+		> .bg {
+			display: none;
+			position: absolute;
+			left: 0;
+			top: 0;
+			right: 0;
+			bottom: 0;
+			@include media-breakpoint-up(lg) {
+				display: block;
+			}
+			img {
+				position: absolute;
+				left: 0;
+				top: 0;
+				width: 100%;
+				height: 100%;
+				object-fit: cover;
+				object-position: center;
+			}
+		}
+		> .inner {
+			width: 100%;
+			position: relative;
+			@include media-breakpoint-up(lg) {
+				display: flex;
+				flex-direction: column;
+			}
+		}
+	}
+}
+#mobile-menu-header {
+	background-color: #fff;
+	@include media-breakpoint-up(lg) {
+		padding: 1.5rem 2rem;
+		background-color: transparent;
+	}
+	> .upper {
+		margin-bottom: 0;
+		padding-bottom: 0;
+		border-bottom: none;
+	}
+}
+#mobile-menu-branding {
+	@extend #site-branding;
+	@include media-breakpoint-up(md) {
+		flex: 1 1 auto;
+	}
+}
+#mobile-menu-title {
+	@extend #site-title;
+	.title {
+		@include media-breakpoint-up(lg) {
+			font-size: 1.25rem;
+			color: #fff;
+		}
+		@include media-breakpoint-up(xl) {
+			font-size: 1.625rem;
+		}
+		.sbdc {
+			&::after {
+				@include media-breakpoint-up(lg) {
+					background-color: rgba(#fff, .2);
+				}
+			}
+		}
+	}
+}
+#mobile-menu-close {
+	@include media-breakpoint-up(lg) {
+		display: flex;
+		width: auto;
+		align-items: center;
+		margin-right: -2rem;
+		&:hover {
+			.label {
+				color: rgba(#fff, .75);
+			}
+			.icon {
+				background-color: rgba(#fff, .6);
+			}
+		}
+	}
+	.label {
+		@include media-breakpoint-up(lg) {
+			display: block;
+			margin-right: .75rem;
+			color: rgba(#fff, .5);
+			letter-spacing: .1em;
+			text-transform: uppercase;
+			font-weight: 700;
+			font-size: 1rem;
+			transition: color .15s;
+		}
+	}
+	.icon {
+		color: $darker-blue;
+		@include media-breakpoint-up(lg) {
+			background-color: rgba(#fff, .4);
+			font-size: 3rem;
+			width: 3rem;
+			color: $darker-blue;
+			transition: background-color .15s;
+		}
+	}
+}
+#mobile-menu-primary-navigation {
+	padding-right: 1.25rem;
+	@include media-breakpoint-up(lg) {
+		padding: 2rem 4rem 1rem;
+		flex: 1 1 auto;
+	}
+}
 #mobile-menu-primary-navigation-menu {
+	@include media-breakpoint-up(lg) {
+		display: flex;
+		margin-left: -1.25rem !important;
+		margin-right: -1.25rem !important;
+		flex-wrap: wrap;
+	}
 	> .menu-item {
+		transition: background-color .15s;
+		@include media-breakpoint-up(lg) {
+			margin-bottom: 2rem;
+			padding-left: 1.25rem;
+			padding-right: 1.25rem;
+			flex: 1 1 20%;
+			max-width: 20%;
+		}
+		&:nth-child(2n-1) {
+			background: transparent;
+		}
+		&.active {
+			background-color: $darker-blue;
+			@include media-breakpoint-up(lg) {
+				background-color: transparent;
+			}
+			a {
+				color: #fff;
+				&::after {
+					border-color: #fff;
+				}
+			}
+		}
+		> a {
+			max-width: 16rem;
+			position: relative;
+			padding-bottom: 1rem;
+			padding-top: 1rem;
+			letter-spacing: .05em;
+			font-weight: 900;
+			text-transform: uppercase;
+			@include media-breakpoint-up(lg) {
+				padding: 0;
+				padding-bottom: .75rem;
+				max-width: none;
+			}
+			&:after {
+				content: '';
+				display: block;
+				position: absolute;
+				left: 1rem;
+				right: 3rem;
+				bottom: .75rem;
+				border-top: 2px solid $darker-blue;
+				transition: border-color .15s;
+				@include media-breakpoint-up(lg) {
+					border-color: #fff;
+					bottom: 0;
+					left: 0;
+					right: 0;
+					border-top-width: 6px;
+				}
+			}
+		}
+		> .toggle {
+			display: none;
+		}
 		> .sub-menu {
 			font-size: 1.25rem;
+			@include media-breakpoint-up(lg) {
+				overflow: visible;
+				height: auto !important;
+				margin-top: 0.75rem;
+				font-size: 1rem;
+			}
 			> .menu-item {
+				@include media-breakpoint-up(lg) {
+					margin-bottom: 0.5rem;
+				}
 				&:first-child {
 					// padding-top: 1rem;
 				}
 				&:last-child {
 					padding-bottom: 1rem;
+					@include media-breakpoint-up(lg) {
+						padding-bottom: 0;
+					}
 				}
 				a {
 					padding: .25rem 1rem;
+					@include media-breakpoint-up(lg) {
+						padding: 0;
+						display: inline;
+					}
 				}
+			}
+		}
+		a {
+			color: $darker-blue;
+			@include media-breakpoint-up(lg) {
+				color: #fff;
+			}
+		}
+	}
+}
+#mobile-menu-extended-cta {
+	display: none;
+	padding: 0 4rem 3rem;
+	@include media-breakpoint-up(lg) {
+		display: block;
+	}
+	> .inner {
+		border: 2px solid #fff;
+		display: flex;
+	}
+	.contents {
+		flex: 1 1 auto;
+		padding: 2rem;
+		display: flex;
+		align-items: center;
+	}
+	.logo {
+		flex: 0 0 25%;
+		max-width: 7.5rem;
+		margin-right: 3rem;
+	}
+	.content {
+		p:last-child {
+			margin-bottom: 0;
+		}
+	}
+}
+#mobile-menu-extended-cta-links {
+	border-left: 2px solid #fff;
+	background-color: $dark-blue;
+	padding: 2rem 2.5rem;
+	display: flex;
+	align-items: center;
+}
+#mobile-menu-extended-cta-links-menu {
+	list-style: none;
+	padding: 0;
+	margin: 0;
+	width: 100%;
+	li {
+		+ li {
+			margin-top: .25rem;
+		}
+	}
+	a {
+		@extend .btn;
+		@extend .btn-light;
+		@extend .btn-has-arrow-icon;
+		// color: $dark-gray;
+		text-transform: uppercase;
+		display: block;
+		// font-size: .75rem;
+		letter-spacing: .1em;
+		font-weight: 700;
+		// padding: 1rem 1.25rem;
+		white-space: nowrap;
+	}
+}
+#mobile-menu-footer {
+	> .upper {
+		padding: 1rem;
+		@include media-breakpoint-up(lg) {
+			display: none;
+		}
+	}
+	> .lower {
+		padding: 1rem;
+		background-color: $darker-blue;
+		@include media-breakpoint-up(lg) {
+			background-color: $light-blue;
+			padding: 2.5rem 4rem;
+			color: rgba($darker-blue, .75);
+			display: flex;
+			align-items: center;
+		}
+	}
+}
+#mobile-menu-primary-cta-links {
+	ul {
+		display: block;
+		margin: 0;
+	}
+	li {
+		margin: 0;
+		+ li {
+			margin-top: .25rem;
+		}
+	}
+	a {
+		color: $darker-blue;
+		text-transform: uppercase;
+		display: block;
+		font-size: 1.125rem;
+		letter-spacing: .1em;
+		font-weight: 900;
+		padding: 1rem 1.25rem;
+		border-radius: .5rem;
+	}
+}
+#mobile-menu-footer-contents {
+	flex: 1 1 auto;
+	font-size: 0.875rem;
+	> .inner {
+		max-width: 600px;
+	}
+	h3 {
+		font-size: 1rem;
+		text-transform: uppercase;
+		letter-spacing: .1em;
+		margin-bottom: 0.5rem;
+	}
+	.content {
+		display: flex;
+		> .inner {
+			flex: 1 1 auto;
+		}
+	}
+	.logos {
+		margin-left: 1rem;
+		> .inner {
+			display: flex;
+			align-items: center;
+		}
+		.logo {
+			flex: 0 0 4.5rem;
+			margin-left: 2rem;
+		}
+	}
+	.footer {
+		margin-bottom: 0;
+		text-transform: uppercase;
+		letter-spacing: .1em;
+	}
+}
+#mobile-menu-footer .social-links {
+	@include media-breakpoint-up(lg) {
+		margin-left: 3rem;
+	}
+	h4 {
+		font-size: 1rem;
+		letter-spacing: .1em;
+		text-transform: uppercase;
+		color: rgba(#fff, .75);
+		text-align: center;
+		margin-bottom: 0.5rem;
+		font-weight: 600;
+		@include media-breakpoint-up(lg) {
+			color: rgba($darker-blue, .75);
+		}
+	}
+	.menu {
+		justify-content: center;
+		flex-wrap: nowrap;
+	}
+	.menu-item {
+		a:hover {
+			.icon svg {
+				fill: #fff;
+				@include media-breakpoint-up(lg) {
+					fill: $darker-blue;
+				}
+			}
+		}
+		.icon svg {
+			fill: rgba(#fff, .75);
+			@include media-breakpoint-up(lg) {
+				fill: rgba($darker-blue, .75);
 			}
 		}
 	}
@@ -439,6 +877,12 @@
 		text-transform: uppercase;
 		letter-spacing: .05em;
 		color: rgba(#fff, .75);
+	}
+}
+#mobile-menu-footer-contents {
+	display: none;
+	@include media-breakpoint-up(lg) {
+		display: block;
 	}
 }
 #footer .social-links {
