--- a/wp-content/themes/norcal-sbdc-ca/assets/src/scss/imports/_common.scss
+++ b/wp-content/themes/norcal-sbdc-ca/assets/src/scss/imports/_common.scss
@@ -475,6 +475,7 @@ body.mobile-menu-active {
 }
 #mobile-menu-title {
 	@extend #site-title;
+	visibility: inherit;
 	.title {
 		@include media-breakpoint-up(lg) {
 			font-size: 1.25rem;
@@ -1335,5 +1336,190 @@ body.mobile-menu-active {
 				}
 			}
 		}
+	}
+}
+
+
+.wp-block-crown-blocks-client-story-index {
+	form.feed-filters {
+		.filters-header {
+			&::before {
+				content: 'Filter:';
+				text-transform: uppercase;
+				letter-spacing: .1em;
+				font-weight: 700;
+				font-size: 1.25rem;
+				margin-right: 1rem;
+			}
+			ul.options.quick-filters {
+				margin: 0 -4px -8px;
+				li.option {
+					margin: 0 4px 8px;
+					padding: 0;
+					border: none;
+					label {
+						input:checked + .label {
+							background-color: $light-blue;
+							border-color: $light-blue;
+						}
+						.label {
+							display: block;
+							padding: .5rem .75rem;
+							border-radius: 10rem;
+							border: 2px solid $primary;
+							font-weight: 700;
+							text-transform: uppercase;
+							letter-spacing: .1em;
+							font-size: 0.875rem;
+							color: $darker-blue;
+							transition: background-color .15s, border-color .15s, color .15s;
+						}
+					}
+				}
+			}
+		}
+	}
+	.ajax-loader {
+		max-width: none;
+	}
+	.post-feed {
+		> .inner {
+			margin-left: -1rem;
+			margin-right: -1rem;
+			display: flex;
+			flex-wrap: wrap;
+		}
+	}
+	article.type-client_story {
+		padding-left: 1rem;
+		padding-right: 1rem;
+		width: 100%;
+		display: flex;
+		@include media-breakpoint-up(md) {
+			width: 50%;
+		}
+		@include media-breakpoint-up(lg) {
+			width: 33.333333%;
+		}
+		a {
+			width: 100%;
+			display: flex;
+			&:hover {
+				.entry-featured-image {
+					opacity: 0;
+				}
+				.entry-header {
+					padding-top: 0;
+				}
+				.entry-link {
+					height: calc(8rem + 2px);
+				}
+			}
+			&.text-color-light {
+				.entry-industries span {
+					border-color: #fff;
+				}
+				.entry-link {
+					border-color: #fff;
+				}
+			}
+			> .inner {
+				position: relative;
+				width: 100%;
+			}
+		}
+		.entry-featured-image {
+			position: absolute;
+			left: 0;
+			top: 0;
+			width: 100%;
+			height: 100%;
+			display: block;
+			&::before {
+				display: none;
+			}
+			.image {
+				position: absolute;
+				left: 0;
+				top: 0;
+				width: 100%;
+				height: 100%;
+			}
+			+ .entry-teaser {
+				justify-content: flex-end;
+				@include media-breakpoint-up(md) {
+					width: 100%;
+				}
+			}
+		}
+		.entry-teaser {
+			width: 100%;
+			position: relative;
+			justify-content: flex-end;
+		}
+		.entry-header {
+			flex: 0 0 auto;
+			padding-top: 8rem;
+			transition: padding-top .2s ease-out;
+		}
+		.entry-centers,
+		.entry-excerpt {
+			display: none;
+		}
+		.entry-title {
+			font-weight: 400;
+			font-size: 2rem;
+		}
+		.entry-industries {
+			margin-bottom: 0;
+			margin-top: 1rem;
+			span {
+				display: inline-block;
+				line-height: 1.2;
+				font-weight: 700;
+				font-size: 0.625rem;
+				letter-spacing: .05em;
+				text-transform: uppercase;
+				border-radius: 10rem;
+				border: 1px solid $body-color;
+				padding: .5rem .75rem;
+			}
+		}
+		.entry-link {
+			border-top: 2px solid $body-color;
+			margin-top: 1em;
+			height: 2px;
+			transition: height .2s ease-out;
+			justify-content: flex-start;
+			align-items: center;
+			> span {
+				&:nth-child(1) {
+					display: none;
+				}
+				&:nth-child(2) {
+					height: auto;
+					width: auto;
+					margin-top: 2rem;
+					&::before {
+						content: 'View Story';
+						font-size: 1.25rem;
+						letter-spacing: .1em;
+						font-weight: 600;
+						text-transform: uppercase;
+						height: auto;
+						width: auto;
+						padding-bottom: 0;
+						position: static;
+						font-style: normal;
+						transform: scale(1);
+					}
+				}
+			}
+		}
+	}
+	.alert-wrapper {
+		padding-left: 1rem;
+		padding-right: 1rem;
+		width: 100%;
 	}
 }
