--- a/wp-content/themes/norcal-sbdc-ca/assets/css/style.css
+++ b/wp-content/themes/norcal-sbdc-ca/assets/css/style.css
@@ -32200,7 +32200,8 @@ body.header-dropdown-active #header-primary-navigation-menu:hover > .menu-item >
     top: 0;
     width: 100%;
     height: 100%;
-    display: block; }
+    display: block;
+    opacity: .25; }
     .wp-block-crown-blocks-client-story-index article.type-client_story .entry-featured-image::before {
       display: none; }
     .wp-block-crown-blocks-client-story-index article.type-client_story .entry-featured-image .image {
@@ -32247,7 +32248,8 @@ body.header-dropdown-active #header-primary-navigation-menu:hover > .menu-item >
       text-transform: uppercase;
       border-radius: 10rem;
       border: 1px solid #032040;
-      padding: .5rem .75rem; }
+      padding: .5rem .75rem;
+      margin-bottom: 4px; }
   .wp-block-crown-blocks-client-story-index article.type-client_story .entry-link {
     border-top: 2px solid #032040;
     margin-top: 1em;
