--- a/wp-content/themes/norcal-sbdc-ca/assets/src/scss/imports/_common.scss
+++ b/wp-content/themes/norcal-sbdc-ca/assets/src/scss/imports/_common.scss
@@ -1435,6 +1435,7 @@ body.mobile-menu-active {
 			width: 100%;
 			height: 100%;
 			display: block;
+			opacity: .25;
 			&::before {
 				display: none;
 			}
@@ -1483,6 +1484,7 @@ body.mobile-menu-active {
 				border-radius: 10rem;
 				border: 1px solid $body-color;
 				padding: .5rem .75rem;
+				margin-bottom: 4px;
 			}
 		}
 		.entry-link {
