--- a/wp-content/themes/norcal-sbdc-ca/assets/css/style.css
+++ b/wp-content/themes/norcal-sbdc-ca/assets/css/style.css
@@ -22236,21 +22236,43 @@ nav.pagination {
   min-height: calc(100% + 8vh);
   top: -4vh; }
 
+.wp-block-crown-blocks-container.is-style-inset-border > .container-bg::before,
 .wp-block-crown-blocks-container.is-style-inset-border > .container-bg::after {
   content: '';
   display: block;
   position: absolute;
   left: 1rem;
   top: 1rem;
-  right: 1rem;
-  bottom: 1rem;
-  border: 1px solid #032040; }
+  right: calc(100% - 1rem);
+  bottom: calc(100% - 1rem); }
 
+.wp-block-crown-blocks-container.is-style-inset-border > .container-bg::before {
+  border-left: 1px solid #032040;
+  border-bottom: 1px solid #032040; }
+
+.wp-block-crown-blocks-container.is-style-inset-border > .container-bg::after {
+  border-right: 1px solid #032040;
+  border-top: 1px solid #032040; }
+
+.wp-block-crown-blocks-container.is-style-inset-border.text-color-light > .container-bg::before,
 .wp-block-crown-blocks-container.is-style-inset-border.text-color-light > .container-bg::after {
   border-color: #fff; }
 
+.wp-block-crown-blocks-container.is-style-inset-border.text-color-dark > .container-bg::before,
 .wp-block-crown-blocks-container.is-style-inset-border.text-color-dark > .container-bg::after {
   border-color: #032040; }
+
+.wp-block-crown-blocks-container.is-style-inset-border.animated > .container-bg::before {
+  -webkit-transition: bottom .5s ease-in 0s, right .5s ease-out .5s;
+  transition: bottom .5s ease-in 0s, right .5s ease-out .5s;
+  bottom: 1rem;
+  right: 1rem; }
+
+.wp-block-crown-blocks-container.is-style-inset-border.animated > .container-bg::after {
+  -webkit-transition: right .5s ease-in 0s, bottom .5s ease-out .5s;
+  transition: right .5s ease-in 0s, bottom .5s ease-out .5s;
+  bottom: 1rem;
+  right: 1rem; }
 
 .wp-block-crown-blocks-container.growing-bg > .container-bg > .inner {
   width: 60vw;
