--- a/wp-content/plugins/crown-blocks/src/block-impact-report-index/style.scss
+++ b/wp-content/plugins/crown-blocks/src/block-impact-report-index/style.scss
@@ -12,30 +12,41 @@ $spacer: 1rem;
 				}
 			}
 		}
-		ul.options.quick-filters li.option {
-			padding-right: 0;
-			border-right: none;
-			label {
-				&:hover {
+		.filters-header ul.options.quick-filters {
+			margin-right: 2rem;
+			flex: 0 1 auto;
+			li.option {
+				padding-right: 0;
+				border-right: none;
+				label {
+					&:hover {
+						.label {
+							background-color: rgba(3,32,64,.1);
+						}
+					}
+					input:checked + .label {
+						background-color: #032040;
+						color: #fff;
+					}
 					.label {
-						background-color: rgba(3,32,64,.1);
+						line-height: 1.2;
+						font-weight: 700;
+						font-size: 0.75rem;
+						border-radius: 10rem;
+						border: 2px solid #032040;
+						padding: .5rem .75rem;
+						color: #032040;
+						transition: color .15s, background-color .15s;
 					}
 				}
-				input:checked + .label {
-					background-color: #032040;
-					color: #fff;
-				}
-				.label {
-					line-height: 1.2;
-					font-weight: 700;
-					font-size: 0.75rem;
-					border-radius: 10rem;
-					border: 2px solid #032040;
-					padding: .5rem .75rem;
-					color: #032040;
-					transition: color .15s, background-color .15s;
-				}
 			}
+		}
+		.filters-header .search-field {
+			display: block;
+		}
+		.filters-header .search-field-spacer {
+			flex: 1 1 auto;
+			order: 99;
 		}
 	}
 	.post-feed {
