--- a/wp-content/themes/norcal-sbdc-ca/assets/src/scss/imports/_common.scss
+++ b/wp-content/themes/norcal-sbdc-ca/assets/src/scss/imports/_common.scss
@@ -371,6 +371,16 @@
 
 #header #mobile-menu-toggle {
 	display: flex;
+	&:hover {
+		.icon {
+			&::before {
+				transform: translateY(-4px);
+			}
+			&::after {
+				transform: translateY(4px);
+			}
+		}
+	}
 	.label {
 		margin-right: 1rem;
 		color: $darker-blue;
@@ -380,17 +390,43 @@
 	}
 	.icon {
 		width: 1.25rem;
+		transition: transform .2s ease-out;
 		@include media-breakpoint-up(lg) {
 			// width: 1.5rem;
 		}
 		&, &::before, &::after {
 			background-color: $blue;
+			transition: background-color .2s, width .2s ease-out, transform .2s ease-out;
 		}
 		&::before {
 			width: 120%;
+			transform-origin: 100% 0%;
 		}
 		&::after {
 			width: 80%;
+			transform-origin: 100% 100%;
+		}
+	}
+	body.mobile-menu-active & {
+		.icon {
+			background-color: transparent;
+			@include media-breakpoint-up(md) {
+				transform: translateX(7px);
+			}
+			@include media-breakpoint-up(lg) {
+				transform: translateX(15px);
+			}
+			@include media-breakpoint-up(xl) {
+				transform: translateX(22px);
+			}
+			&::before {
+				width: 110%;
+				transform: rotate(-45deg);
+			}
+			&::after {
+				width: 110%;
+				transform: rotate(45deg);
+			}
 		}
 	}
 }
@@ -415,7 +451,7 @@ body.mobile-menu-active {
 	max-width: none;
 	width: 100%;
 	left: 0;
-	transform: translate3d(0, -2rem, 0);
+	// transform: translate3d(0, -2rem, 0);
 	transition: transform .2s ease-out, visibility 0s .2s, transform .2s ease-out, opacity .2s;
 	opacity: 0;
 	@include media-breakpoint-up(md) {
@@ -479,8 +515,12 @@ body.mobile-menu-active {
 	}
 }
 #mobile-menu-header {
+	padding: .75rem 1rem;
+	@include media-breakpoint-up(md) {
+		padding: 1rem 1rem;
+	}
 	@include media-breakpoint-up(lg) {
-		padding: 1.5rem 2rem;
+		padding: 2.6rem 2rem 1rem;
 		background-color: transparent;
 	}
 	> .upper {
